[project]
name = "base"
version = "0.1.0"
description = "Minimal Python 3.13 base for testing application stacks"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi==0.115.12",
    "pydantic==2.11.3",
    "uvicorn==0.34.0",
    "pytest==8.3.5",
    "httpx==0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
